fix post announcements in frontend
